Working On SMM ADMIN

--- a/smm-admin/alerts.html
+++ b/smm-admin/alerts.html
@@ -324,7 +324,7 @@
                 </nav>
             </div>
 
-            <!-- Pagination -->
+            <!-- Alerts -->
             <div class="mb-5">
                 <div class="row g-5">
                     <div class="col-xl-6">
@@ -332,7 +332,7 @@
 
                             <p class="border-bottom text-capitalize fw-medium px-4 px-sm-5 py-5 mb-4">Alerts</p>
 
-                            <div class="card-body button-list px-4 px-sm-5">
+                            <div class="card-body px-4 px-sm-5">
 
                                 <div class="alert alert-primary alert-dismissible fade show" role="alert">
                                     <i class="fa-regular fa-square-check"></i>
@@ -380,7 +380,7 @@
 
 
     <!-- Search Modal -->
-    <div class="modal fade p-0 show" id="searchModal">
+    <div class="modal fade p-0" id="searchModal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content border-0 py-5 rounded-0">
 
