--- a/smm-admin/buttons.html
+++ b/smm-admin/buttons.html
@@ -332,9 +332,9 @@
                     <div class="col-lg-6">
                         <div class="text-color bg-white rounded-4 shadow-lg pb-4">
 
-                            <p class="border-bottom text-capitalize fw-medium px-5 py-5 mb-4">Rounded Button</p>
+                            <p class="border-bottom text-capitalize fw-medium px-4 px-sm-5 py-5 mb-4">Rounded Button</p>
 
-                            <div class="card-body button-list px-5">
+                            <div class="card-body button-list px-4 px-sm-5">
                                 <button class="btn button-primary btn-rounded">Primary</button>
                                 <button class="btn button-success btn-rounded">Success</button>
                                 <button class="btn button-danger btn-rounded">Danger</button>
@@ -348,9 +348,9 @@
                     <div class="col-lg-6">
                         <div class="device-location text-color bg-white rounded-4 shadow-lg pb-4">
 
-                            <p class="border-bottom text-capitalize fw-medium px-5 py-5 mb-4">Normal Button</p>
+                            <p class="border-bottom text-capitalize fw-medium px-4 px-sm-5 py-5 mb-4">Normal Button</p>
 
-                            <div class="card-body button-list px-5">
+                            <div class="card-body button-list px-4 px-sm-5">
                                 <button class="btn button-primary">Primary</button>
                                 <button class="btn button-success">Success</button>
                                 <button class="btn button-danger">Danger</button>
@@ -364,8 +364,9 @@
                     <div class="col-lg-6">
                         <div class="text-color bg-white rounded-4 shadow-lg pb-4">
 
-                            <p class="border-bottom text-capitalize fw-medium px-5 py-5 mb-4">Toggle Switches</p>
-                            <div class="card-body button-list px-5">
+                            <p class="border-bottom text-capitalize fw-medium px-4 px-sm-5 py-5 mb-4">Toggle Switches
+                            </p>
+                            <div class="card-body button-list px-4 px-sm-5">
                                 <div class="form-check form-switch">
                                     <input class="form-check-input" type="checkbox" role="switch"
                                         id="flexSwitchCheckDefault">
@@ -384,8 +385,8 @@
                     <div class="col-lg-6">
                         <div class="text-color bg-white rounded-4 shadow-lg pb-4">
 
-                            <p class="border-bottom text-capitalize fw-medium px-5 py-5 mb-4">Radios</p>
-                            <div class="card-body button-list px-5">
+                            <p class="border-bottom text-capitalize fw-medium px-4 px-sm-5 py-5 mb-4">Radios</p>
+                            <div class="card-body button-list px-4 px-sm-5">
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="flexRadioDefault"
                                         id="flexRadioDefault1">
@@ -413,7 +414,7 @@
 
 
     <!-- Search Modal -->
-    <div class="modal fade p-0 show" id="searchModal">
+    <div class="modal fade p-0" id="searchModal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content border-0 py-5 rounded-0">
 
