--- a/smm-admin/form-elements.html
+++ b/smm-admin/form-elements.html
@@ -332,9 +332,9 @@
                     <div class="col-lg-6">
                         <div class="text-color bg-white rounded-4 shadow-lg pb-4">
 
-                            <p class="border-bottom text-capitalize fw-medium px-5 py-5 mb-4">Form Elements</p>
+                            <p class="border-bottom text-capitalize fw-medium px-4 px-sm-5 py-5 mb-4">Form Elements</p>
 
-                            <div class="card-body button-list px-5">
+                            <div class="card-body button-list px-4 px-sm-5">
                                 <form action="" class="text-color">
                                     <div class="form-group row align-items-center mb-4">
                                         <label class="col-md-3" for="">text</label>
@@ -373,7 +373,7 @@
 
 
     <!-- Search Modal -->
-    <div class="modal fade p-0 show" id="searchModal">
+    <div class="modal fade p-0" id="searchModal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content border-0 py-5 rounded-0">
 
