--- a/smm-admin/login.html
+++ b/smm-admin/login.html
@@ -37,8 +37,8 @@
                     </a>
                 </div>
 
-                <div class="row justify-content-center">
-                    <div class="col-lg-5 col-xxl-4 bg-white rounded-4 p-5 text-color-muted">
+                <div class="row justify-content-center mx-1">
+                    <div class="col-sm-10 col-md-7 col-lg-5 col-xxl-4 bg-white rounded-4 p-5 text-color-muted">
                         <h1 class="text-center fw-normal text-color mb-5">Login</h1>
 
                         <form action="">
