--- a/smm-admin/404.html
+++ b/smm-admin/404.html
@@ -29,9 +29,9 @@
 <body class="body" id="body">
 
     <section class="404-page page-bg">
-        <div class="container">
-            <div class="404-content position-absolute top-50 start-50 translate-middle white-color text-center">
-                <h1 class="fw-normal mb-2">OOPS! Page not found</h1>
+        <div class="404-content position-absolute top-50 start-50 translate-middle white-color text-center w-100">
+            <div class="container">
+                <h1 class="fs-30 fw-normal mb-2">OOPS! Page not found</h1>
                 <p class="pb-4 mb-5">
                     Sorry, an error has occured, Requested page not found!
                 </p>
