Working On SMM ADMIN

--- a/smm-admin/form-elements.html
+++ b/smm-admin/form-elements.html
@@ -18,9 +18,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
-    <!-- Swiper CSS -->
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>Form Elements - SMM Panel</title>
@@ -326,7 +323,7 @@
                 </nav>
             </div>
 
-            <!-- Buttons -->
+            <!-- Form Elements -->
             <div class="mb-5">
                 <div class="row g-5">
                     <div class="col-lg-6">
@@ -366,7 +363,21 @@
                     </div>
                 </div>
             </div>
-            <!-- /Buttons -->
+            <!-- /Form Elements -->
+
+            <!-- Footer Starts Here -->
+            <footer class="footer">
+                <div class="row">
+                    <div class="col-md-12 text-center pt-5 border-top mt-5">
+                        <p class="fs-15">
+                            Copyright &copy; <span class="brand-color">2023</span>. Created by <span
+                                class="brand-color">OkkhoTech</span> | All rights reserved
+                        </p>
+                    </div>
+                </div>
+            </footer>
+            <!-- Footer Ends Here -->
+
         </div>
     </main>
     <!-- Main Content Ends Here -->
