--- a/smm-admin/buttons.html
+++ b/smm-admin/buttons.html
@@ -18,9 +18,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
-    <!-- Swiper CSS -->
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>SMM Panel</title>
@@ -408,6 +405,20 @@
                 </div>
             </div>
             <!-- /Buttons -->
+
+            <!-- Footer Starts Here -->
+            <footer class="footer">
+                <div class="row">
+                    <div class="col-md-12 text-center pt-5 border-top mt-5">
+                        <p class="fs-15">
+                            Copyright &copy; <span class="brand-color">2023</span>. Created by <span
+                                class="brand-color">OkkhoTech</span> | All rights reserved
+                        </p>
+                    </div>
+                </div>
+            </footer>
+            <!-- Footer Ends Here -->
+
         </div>
     </main>
     <!-- Main Content Ends Here -->
