--- a/about.html
+++ b/about.html
@@ -20,9 +20,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
-    <!-- Swiper CSS -->
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>Best SMM Panel</title>
@@ -84,7 +81,7 @@
         <!-- About Banner Section Starts Here -->
         <section class="about-area-banner">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
                         <div class="about-banner-content">
                             <h1 class="main-title mb-4">about us</h1>
@@ -134,25 +131,25 @@
 
                     <div class="col-lg-12 col-xl-8 pb-5">
                         <div class="row g-4 g-xl-5 text-capitalize">
-                            <div class="col-lg-3">
+                            <div class="col-6 col-md-3">
                                 <div class="achievements-box">
                                     <h2 class="fs-35 fw-bold text-muted">2M+</h2>
                                     <h3>Customers</h3>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-6 col-md-3">
                                 <div class="achievements-box">
                                     <h2 class="fs-35 fw-bold">5M+</h2>
                                     <h3>total orders</h3>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-6 col-md-3">
                                 <div class="achievements-box">
                                     <h2 class="fs-35 fw-bold text-muted">5M+</h2>
                                     <h3>delivered</h3>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-6 col-md-3">
                                 <div class="achievements-box">
                                     <h2 class="fs-35 fw-bold">2M+</h2>
                                     <h3>happy clients</h3>
@@ -177,7 +174,7 @@
                     <div class="col-md-12">
                         <div class="row g-4 g-xxl-5">
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="feedback-card h-100">
                                     <div class="d-flex align-items-center gap-4 mb-4">
                                         <div class="feedback-card-img">
@@ -198,7 +195,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="feedback-card h-100">
                                     <div class="d-flex align-items-center gap-4 mb-4">
                                         <div class="feedback-card-img">
@@ -227,7 +224,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="feedback-card h-100">
                                     <div class="d-flex align-items-center gap-4 mb-4">
                                         <div class="feedback-card-img">
@@ -266,7 +263,7 @@
         <!-- Reseller SMM Service Section Starts Here -->
         <section class="reseller-service">
             <div class="container">
-                <div class="row">
+                <div class="row g-5">
                     <div class="col-lg-7">
                         <div class="reseller-content">
                             <h1 class="fs-60 fw-bold lh-base mb-4">Reseller Smm Panel Services</h1>
@@ -376,9 +373,9 @@
                 </div>
 
                 <div class="col-lg-12 mb-5">
-                    <div class="row g-4 g-xl-5">
+                    <div class="row g-5 g-sm-4 g-xl-5 text-center text-sm-start">
 
-                        <div class="col-lg-6">
+                        <div class="col-12 col-lg-6">
                             <div class="footer-col">
                                 <a href="#" class="logo d-inline-block mb-5">
                                     <img src="images/logo.png" width="100px" alt="Logo">
@@ -393,7 +390,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">useful links</h2>
                                 <ul class="text-capitalize">
@@ -406,7 +403,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">services</h2>
                                 <ul class="text-capitalize">
@@ -419,7 +416,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">services</h2>
                                 <div class="">
@@ -462,9 +459,9 @@
 
         <div class="bg-dark-blue py-4 copy_right_area">
             <div class="container">
-                <div class="col-lg-12">
-                    <div class="d-flex justify-content-between align-items-center gap-4">
-                        <p>
+                <div class="col-lg-12 text-center text-sm-start">
+                    <div class="d-sm-flex justify-content-between align-items-center gap-4">
+                        <p class="mb-3 mb-sm-0">
                             © Copyright SmmPakPanel.Com All Rights Reserved
                         </p>
                         <p>
@@ -481,9 +478,7 @@
 
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
