--- a/blog.html
+++ b/blog.html
@@ -20,9 +20,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
-    <!-- Swiper CSS -->
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>Best SMM Panel</title>
@@ -91,9 +88,9 @@
                     </div>
 
                     <div class="col-lg-12">
-                        <div class="row g-4 g-xl-5">
+                        <div class="row g-5 g-sm-4 g-xl-5">
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-1.png" alt="">
 
@@ -112,7 +109,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-2.png" alt="">
 
@@ -131,7 +128,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-3.png" alt="">
 
@@ -150,7 +147,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-4.png" alt="">
 
@@ -169,7 +166,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-5.png" alt="">
 
@@ -188,7 +185,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-6.png" alt="">
 
@@ -207,7 +204,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-2.png" alt="">
 
@@ -226,7 +223,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-3.png" alt="">
 
@@ -245,7 +242,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-1.png" alt="">
 
@@ -264,7 +261,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-2.png" alt="">
 
@@ -283,7 +280,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-3.png" alt="">
 
@@ -302,7 +299,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-4.png" alt="">
 
@@ -321,7 +318,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-5.png" alt="">
 
@@ -340,7 +337,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-6.png" alt="">
 
@@ -359,7 +356,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-2.png" alt="">
 
@@ -378,7 +375,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-sm-6 col-lg-4">
                                 <div class="blog-card">
                                     <img src="images/blog-post-img-3.png" alt="">
 
@@ -426,9 +423,9 @@
                 </div>
 
                 <div class="col-lg-12 mb-5">
-                    <div class="row g-4 g-xl-5">
+                    <div class="row g-5 g-sm-4 g-xl-5 text-center text-sm-start">
 
-                        <div class="col-lg-6">
+                        <div class="col-12 col-lg-6">
                             <div class="footer-col">
                                 <a href="#" class="logo d-inline-block mb-5">
                                     <img src="images/logo.png" width="100px" alt="Logo">
@@ -443,7 +440,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">useful links</h2>
                                 <ul class="text-capitalize">
@@ -456,7 +453,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">services</h2>
                                 <ul class="text-capitalize">
@@ -469,7 +466,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">services</h2>
                                 <div class="">
@@ -512,9 +509,9 @@
 
         <div class="bg-dark-blue py-4 copy_right_area">
             <div class="container">
-                <div class="col-lg-12">
-                    <div class="d-flex justify-content-between align-items-center gap-4">
-                        <p>
+                <div class="col-lg-12 text-center text-sm-start">
+                    <div class="d-sm-flex justify-content-between align-items-center gap-4">
+                        <p class="mb-3 mb-sm-0">
                             © Copyright SmmPakPanel.Com All Rights Reserved
                         </p>
                         <p>
@@ -531,9 +528,7 @@
 
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
