--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
-  <!-- Swiper CSS -->
-  <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
-
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/main.css" />
   <title>Best SMM Panel</title>
@@ -115,50 +112,50 @@
     <!-- SMM Social Medias Section Start Here -->
     <section class="social-medias" style="padding-bottom: 0">
       <div class="container">
-        <div class="row">
-          <div class="col">
+        <div class="row g-4 justify-content-center">
+          <div class="col-2 col-xxl-1">
             <div class="social-media-logo-single h-100 bg-blue p-4 rounded-5">
               <a href="" class="d-block">
                 <img class="w-100" src="images/twitter.png" alt="">
               </a>
             </div>
           </div>
-          <div class="col">
+          <div class="col-2 col-xxl-1">
             <div class="social-media-logo-single h-100 bg-blue p-4 rounded-5">
               <a href="" class="d-block">
                 <img class="w-100" src="images/telegram.png" alt="">
               </a>
             </div>
           </div>
-          <div class="col">
+          <div class="col-2 col-xxl-1">
             <div class="social-media-logo-single h-100 bg-blue p-4 rounded-5">
               <a href="" class="d-block">
                 <img class="w-100" src="images/facebook.png" alt="">
               </a>
             </div>
           </div>
-          <div class="col">
+          <div class="col-2 col-xxl-1">
             <div class="social-media-logo-single h-100 bg-blue p-4 rounded-5">
               <a href="" class="d-block">
                 <img class="w-100" src="images/tiktok.png" alt="">
               </a>
             </div>
           </div>
-          <div class="col">
+          <div class="col-2 col-xxl-1">
             <div class="social-media-logo-single h-100 bg-blue p-4 rounded-5">
               <a href="" class="d-block">
                 <img class="w-100" src="images/snapchat.png" alt="">
               </a>
             </div>
           </div>
-          <div class="col">
+          <div class="col-2 col-xxl-1">
             <div class="social-media-logo-single h-100 bg-blue p-4 rounded-5">
               <a href="" class="d-block">
                 <img class="w-100" src="images/youtube.png" alt="">
               </a>
             </div>
           </div>
-          <div class="col">
+          <div class="col-2 col-xxl-1">
             <div class="social-media-logo-single h-100 bg-blue p-4 rounded-5">
               <a href="" class="d-block">
                 <img class="w-100" src="images/zoom.png" alt="">
@@ -317,8 +314,8 @@
     <!-- Instagram SMM Service Section Starts Here -->
     <section class="instagram-smm-service bg-blue">
       <div class="container">
-        <div class="row g-4">
-          <div class="col-md-6">
+        <div class="row g-5">
+          <div class="col-lg-6">
             <div class="">
               <h1 class="fs-60 fw-bold lh-base mb-4">Instagram Smm Services</h1>
               <p class="lh-base fs-3 mb-4">
@@ -344,7 +341,7 @@
               </a>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <div class="">
               <img src="images/instagram-service-banner-img.webp" alt="" class="w-100">
             </div>
@@ -359,14 +356,14 @@
     <section class="what-smm-servie-we-provide">
       <div class="container">
         <div class="row g-5">
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <div class="">
               <img src="images/what-smm-service-provide-banner.webp" alt="" class="w-100">
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <div class="">
-              <h1 class="fs-60 fw-bold lh-base mb-5">
+              <h1 class="fs-60 fw-bold mb-5">
                 What SMM Services we are offering for your brand success
               </h1>
               <p class="lh-base fs-3 mb-5">
@@ -404,7 +401,7 @@
           <div class="col-md-12">
             <div class="row g-4 g-xxl-5">
 
-              <div class="col-lg-4">
+              <div class="col-sm-6 col-lg-4">
                 <div class="feedback-card h-100">
                   <div class="d-flex align-items-center gap-4 mb-4">
                     <div class="feedback-card-img">
@@ -423,7 +420,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4">
+              <div class="col-sm-6 col-lg-4">
                 <div class="feedback-card h-100">
                   <div class="d-flex align-items-center gap-4 mb-4">
                     <div class="feedback-card-img">
@@ -447,7 +444,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4">
+              <div class="col-sm-6 col-lg-4">
                 <div class="feedback-card h-100">
                   <div class="d-flex align-items-center gap-4 mb-4">
                     <div class="feedback-card-img">
@@ -695,37 +692,37 @@
 
           <div class="col-lg-8">
             <div class="row justify-content-center g-3">
-              <div class="col-lg-3">
+              <div class="col-6 col-sm-4 col-lg-3">
                 <div class="payment-method-logo">
                   <img class="img-fluid" src="images/payment-method-visa.png" alt="">
                 </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-6 col-sm-4 col-lg-3">
                 <div class="payment-method-logo">
                   <img class="img-fluid" src="images/payment-method-bitcoin.svg" alt="">
                 </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-6 col-sm-4 col-lg-3">
                 <div class="payment-method-logo">
                   <img class="img-fluid" src="images/payment-method-perfect-money.png" alt="">
                 </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-6 col-sm-4 col-lg-3">
                 <div class="payment-method-logo">
                   <img class="img-fluid" src="images/payment-method-ethereum.png" alt="">
                 </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-6 col-sm-4 col-lg-3">
                 <div class="payment-method-logo">
                   <img class="img-fluid" src="images/payment-method-master-card.png" alt="">
                 </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-6 col-sm-4 col-lg-3">
                 <div class="payment-method-logo">
                   <img class="img-fluid" src="images/payment-method-paypal.png" alt="">
                 </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-6 col-sm-4 col-lg-3">
                 <div class="payment-method-logo">
                   <img class="img-fluid" src="images/payment-method-webmoney.png" alt="">
                 </div>
@@ -761,9 +758,9 @@
         </div>
 
         <div class="col-lg-12 mb-5">
-          <div class="row g-4 g-xl-5">
+          <div class="row g-5 g-sm-4 g-xl-5 text-center text-sm-start">
 
-            <div class="col-lg-6">
+            <div class="col-12 col-lg-6">
               <div class="footer-col">
                 <a href="#" class="logo d-inline-block mb-5">
                   <img src="images/logo.png" width="100px" alt="Logo">
@@ -777,7 +774,7 @@
               </div>
             </div>
 
-            <div class="col-lg-2">
+            <div class="col-12 col-sm-4 col-lg-2">
               <div class="footer-col">
                 <h2 class="color-yellow text-capitalize fw-bold mb-4">useful links</h2>
                 <ul class="text-capitalize">
@@ -790,7 +787,7 @@
               </div>
             </div>
 
-            <div class="col-lg-2">
+            <div class="col-12 col-sm-4 col-lg-2">
               <div class="footer-col">
                 <h2 class="color-yellow text-capitalize fw-bold mb-4">services</h2>
                 <ul class="text-capitalize">
@@ -803,7 +800,7 @@
               </div>
             </div>
 
-            <div class="col-lg-2">
+            <div class="col-12 col-sm-4 col-lg-2">
               <div class="footer-col">
                 <h2 class="color-yellow text-capitalize fw-bold mb-4">services</h2>
                 <div class="">
@@ -846,9 +843,9 @@
 
     <div class="bg-dark-blue py-4 copy_right_area">
       <div class="container">
-        <div class="col-lg-12">
-          <div class="d-flex justify-content-between align-items-center gap-4">
-            <p>
+        <div class="col-lg-12 text-center text-sm-start">
+          <div class="d-sm-flex justify-content-between align-items-center gap-4">
+            <p class="mb-3 mb-sm-0">
               © Copyright SmmPakPanel.Com All Rights Reserved
             </p>
             <p>
@@ -865,9 +862,7 @@
 
 
   <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/swiper-bundle.min.js"></script>
   <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/isotope.pkgd.min.js"></script>
   <script src="assets/js/script.js"></script>
 </body>
 
