--- a/faq.html
+++ b/faq.html
@@ -20,9 +20,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
-    <!-- Swiper CSS -->
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>Best SMM Panel</title>
@@ -88,9 +85,9 @@
                     Frequently Ask Question
                 </h1>
 
-                <div class="row g-4 g-xl-5">
+                <div class="row g-5 g-md-4 g-xl-5">
 
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
                         <div class="faq-card">
                             <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-1"
                                 aria-expanded="false" aria-controls="faq-1">
@@ -113,7 +110,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
                         <div class="faq-card">
                             <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-2"
                                 aria-expanded="false" aria-controls="faq-2">
@@ -137,7 +134,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
                         <div class="faq-card">
                             <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-3"
                                 aria-expanded="false" aria-controls="faq-3">
@@ -160,7 +157,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
                         <div class="faq-card">
                             <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-4"
                                 aria-expanded="false" aria-controls="faq-4">
@@ -183,7 +180,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
                         <div class="faq-card">
                             <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-5"
                                 aria-expanded="false" aria-controls="faq-5">
@@ -206,7 +203,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-md-6">
                         <div class="faq-card">
                             <div class="faq-title-btn" type="button" data-bs-toggle="collapse" data-bs-target="#faq-6"
                                 aria-expanded="false" aria-controls="faq-6">
@@ -256,9 +253,9 @@
                 </div>
 
                 <div class="col-lg-12 mb-5">
-                    <div class="row g-4 g-xl-5">
+                    <div class="row g-5 g-sm-4 g-xl-5 text-center text-sm-start">
 
-                        <div class="col-lg-6">
+                        <div class="col-12 col-lg-6">
                             <div class="footer-col">
                                 <a href="#" class="logo d-inline-block mb-5">
                                     <img src="images/logo.png" width="100px" alt="Logo">
@@ -273,7 +270,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">useful links</h2>
                                 <ul class="text-capitalize">
@@ -286,7 +283,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">services</h2>
                                 <ul class="text-capitalize">
@@ -299,7 +296,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">services</h2>
                                 <div class="">
@@ -342,9 +339,9 @@
 
         <div class="bg-dark-blue py-4 copy_right_area">
             <div class="container">
-                <div class="col-lg-12">
-                    <div class="d-flex justify-content-between align-items-center gap-4">
-                        <p>
+                <div class="col-lg-12 text-center text-sm-start">
+                    <div class="d-sm-flex justify-content-between align-items-center gap-4">
+                        <p class="mb-3 mb-sm-0">
                             © Copyright SmmPakPanel.Com All Rights Reserved
                         </p>
                         <p>
@@ -361,9 +358,7 @@
 
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
