--- a/services.html
+++ b/services.html
@@ -20,9 +20,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
-    <!-- Swiper CSS -->
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>Best SMM Panel</title>
@@ -87,9 +84,9 @@
                 <div class="row">
                     <!-- Filter Area -->
                     <div class="col-lg-12 mb-5">
-                        <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-md-flex justify-content-between align-items-center">
                             <!-- Search Box -->
-                            <form class="d-flex bg-blue button">
+                            <form class="d-flex bg-blue button mb-4 mb-md-0">
                                 <input class="form-control bg-transparent color-white me-2" type="search"
                                     placeholder="Search" aria-label="Search">
                                 <button class="btn button px-5 py-2 fs-4 bg-yellow color-dark-blue" type="submit">
@@ -99,8 +96,7 @@
 
                             <!-- Select Category -->
                             <div>
-                                <select class="form-select bg-yellow button fs-3 color-dark-blue fw-normal px-4 py-2"
-                                    style="max-width: 30rem">
+                                <select class="form-select bg-yellow button fs-3 color-dark-blue fw-normal px-4 py-2">
                                     <option class="bg-white color-dark-blue">Select Category</option>
                                     <option class="bg-white color-dark-blue">♛ SMM PAK (Cheapest)</option>
                                     <option class="bg-white color-dark-blue">♛ SMM PAK (Cheapest)</option>
@@ -442,9 +438,9 @@
                 </div>
 
                 <div class="col-lg-12 mb-5">
-                    <div class="row g-4 g-xl-5">
+                    <div class="row g-5 g-sm-4 g-xl-5 text-center text-sm-start">
 
-                        <div class="col-lg-6">
+                        <div class="col-12 col-lg-6">
                             <div class="footer-col">
                                 <a href="#" class="logo d-inline-block mb-5">
                                     <img src="images/logo.png" width="100px" alt="Logo">
@@ -459,7 +455,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">useful links</h2>
                                 <ul class="text-capitalize">
@@ -472,7 +468,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">services</h2>
                                 <ul class="text-capitalize">
@@ -485,7 +481,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2">
+                        <div class="col-12 col-sm-4 col-lg-2">
                             <div class="footer-col">
                                 <h2 class="color-yellow text-capitalize fw-bold mb-4">services</h2>
                                 <div class="">
@@ -528,9 +524,9 @@
 
         <div class="bg-dark-blue py-4 copy_right_area">
             <div class="container">
-                <div class="col-lg-12">
-                    <div class="d-flex justify-content-between align-items-center gap-4">
-                        <p>
+                <div class="col-lg-12 text-center text-sm-start">
+                    <div class="d-sm-flex justify-content-between align-items-center gap-4">
+                        <p class="mb-3 mb-sm-0">
                             © Copyright SmmPakPanel.Com All Rights Reserved
                         </p>
                         <p>
@@ -577,9 +573,7 @@
     </div>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
