--- a/smm-admin/alerts.html
+++ b/smm-admin/alerts.html
@@ -20,7 +20,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css" />
-    <title>SMM Panel</title>
+    <title>Alerts - SMM Panel</title>
 </head>
 
 <body class="body" id="body">
@@ -261,12 +261,76 @@
                         </span>
 
                         <div class="icon-group ms-4 ms-sm-5">
-                            <a class="text-color-dark brand-color" href="">
-                                <div class="floating-text-icon d-inline-block position-relative fs-2">
-                                    <i class="fa-regular fa-bell"></i>
-                                    <span class="floating-num bg-green fs-6"></span>
+                            <div class="floating-text-icon d-inline-block position-relative fs-2" type="button"
+                                class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fa-regular fa-bell"></i>
+                                <span class="floating-num bg-green fs-6"></span>
+                            </div>
+
+                            <div class="dropdown-menu dropdown-menu-end rounded-4" style="max-width: 28rem">
+                                <div class="dropdown-header p-4 text-nowrap border-bottom">
+                                    <h3 class="text-color mb-2">Notification</h3>
                                 </div>
-                            </a>
+
+                                <ul>
+                                    <li class="nav-item border-bottom hovarable">
+                                        <a class="p-4 d-block" href="">
+                                            <div class="d-flex gap-4">
+                                                <div class="noti-icon">
+                                                    <span
+                                                        class="d-flex justify-content-center align-items-center rounded-circle bg-brand white-color fs-3"
+                                                        style="width: 4rem; height: 4rem;">
+                                                        <i class="fa-regular fa-envelope"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="noti-details">
+                                                    <h4 class="noti-text mb-2 text-color">New application received</h4>
+                                                    <h5 class="fw-normal text-color-muted">2 days ago</h5>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item border-bottom hovarable">
+                                        <a class="p-4 d-block" href="">
+                                            <div class="d-flex gap-4">
+                                                <div class="noti-icon">
+                                                    <span
+                                                        class="d-flex justify-content-center align-items-center rounded-circle bg-info white-color fs-3"
+                                                        style="width: 4rem; height: 4rem;">
+                                                        <i class="fa-regular fa-square-check"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="noti-details">
+                                                    <h4 class="noti-text mb-2 text-color">Project has been approved</h4>
+                                                    <h5 class="fw-normal text-color-muted">2 days ago</h5>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item border-bottom hovarable">
+                                        <a class="p-4 d-block" href="">
+                                            <div class="d-flex gap-4">
+                                                <div class="noti-icon">
+                                                    <span
+                                                        class="d-flex justify-content-center align-items-center rounded-circle bg-success white-color fs-3"
+                                                        style="width: 4rem; height: 4rem;">
+                                                        <i class="fa-solid fa-cart-arrow-down"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="noti-details">
+                                                    <h4 class="noti-text mb-2 text-color">New application received</h4>
+                                                    <h5 class="fw-normal text-color-muted">2 days ago</h5>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item hovarable">
+                                        <a class="p-4 d-block text-center fs-15 text-color-muted" href="">
+                                            View all Notification
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
 
                         <div class="user-profile-img ms-4 ms-sm-5">
